# S6H4D

./: README.md
myrot_urdf_file/S6H4D/: CMakeLists.txt  package.xml
myrot_urdf_file/S6H4D/config/: S6H4D_control.yaml  joint_names_S6H4D_urdf_file.yaml
myrot_urdf_file/S6H4D/launch/: control_gazebo.launch  display.launch  gazebo.launch  rvei_gazebo.launch  rviz_gazebo.launch  rvize.launch  six_control.launch
myrot_urdf_file/S6H4D/meshes/: base_link.STL  foream_link.STL  shoulder_link.STL  upper_arm_link.STL  wrist_1_link.STL  wrist_2_link.STL  wrist_3_link.STL
myrot_urdf_file/S6H4D/sixaxis_control/: CMakeLists.txt  package.xml
myrot_urdf_file/S6H4D/sixaxis_control/config/: sixaxis_control.yaml
myrot_urdf_file/S6H4D/sixaxis_control/launch/: sixaxis_control.launch
myrot_urdf_file/S6H4D/urdf/: S6H4D_urdf_file fixed.urdf  S6H4D_urdf_file.csv  S6H4D_urdf_file.urdf  sixaxis.xacro
